// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RemoveModal /> should render 1`] = `
<Modal
  color="red"
  label="Remove"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Remove bar
  </ModalHeader>
  <RemoveModal__RemoveModalBody>
    <span>
      Are you sure you want to remove 
      <strong>
        Foo
      </strong>
      ?
    </span>
  </RemoveModal__RemoveModalBody>
  <Modal__ModalFooter>
    <Button
      color="red"
      disabled={false}
      icon="check"
      onClick={[MockFunction]}
      tipPlacement="top"
      type="button"
    >
      Confirm
    </Button>
  </Modal__ModalFooter>
</Modal>
`;

exports[`<RemoveModal /> should render when [show=false] 1`] = `
<Modal
  color="red"
  label="Remove"
  onHide={[MockFunction]}
  show={false}
>
  <ModalHeader>
    Remove bar
  </ModalHeader>
  <RemoveModal__RemoveModalBody>
    <span>
      Are you sure you want to remove 
      <strong>
        Foo
      </strong>
      ?
    </span>
  </RemoveModal__RemoveModalBody>
  <Modal__ModalFooter>
    <Button
      color="red"
      disabled={false}
      icon="check"
      onClick={[MockFunction]}
      tipPlacement="top"
      type="button"
    >
      Confirm
    </Button>
  </Modal__ModalFooter>
</Modal>
`;

exports[`<RemoveModal /> should render with message 1`] = `
<Modal
  color="red"
  label="Remove"
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Remove bar
  </ModalHeader>
  <RemoveModal__RemoveModalBody>
    Are you sure about this?
  </RemoveModal__RemoveModalBody>
  <Modal__ModalFooter>
    <Button
      color="red"
      disabled={false}
      icon="check"
      onClick={[MockFunction]}
      tipPlacement="top"
      type="button"
    >
      Confirm
    </Button>
  </Modal__ModalFooter>
</Modal>
`;
